# myfiz

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  skills-lock.json
app/: config.py  dedup.py  main.py  models.py
app/parsers/: bcp.py  telegram_msg.py
app/services/: gmail.py  sheets.py  telegram.py
scripts/: debug_sa.py  generate_token.py  get_history_id.py  setup_watch.py  test_sheets.py
tests/: test_bcp_parser.py
